# CLAMM

./: LICENSE  README.md  requirements.txt
CLAMM_Fit/: CLAMM_Fit.py  README.md  param_in  str_out  sym_out  symop.py
CLAMM_Fit/NiMnIn_Example/: NiMnIn_dataset  cluster_NiMnIn
CLAMM_Fit/NiMnIn_Example_Materials/: POSCAR
CLAMM_MC/: CMakeLists.txt  README  README.md
CLAMM_MC/Sample_Input/: CLUSTERS  INPUT  POSCAR  SPIN_STATES
CLAMM_MC/src/: algo0.cpp  algo0.h  algo1.cpp  algo1.h  algo2.cpp  algo2.h  algo3.cpp  algo3.h  algo4.cpp  algo4.h  algo_m2.cpp  algo_m2.h  main.cpp  rule.cpp  rule.h  run_sim.cpp  run_sim.h  session.cpp  session.h  sim_cell.cpp  utils.cpp  utils.h
CLAMM_Prep/: README.md  compile_vasp_data.py  mag_distrib  mag_distrib.py  pre_process.py
CLAMM_Prep/NiMnIn_sample_data/A_0/: CONTCAR  OUTCAR
CLAMM_Prep/NiMnIn_sample_data/A_10/: CONTCAR  INCAR  POSCAR
CLAMM_Prep/NiMnIn_sample_data/A_11/: CONTCAR  INCAR  OUTCAR
CLAMM_Prep/NiMnIn_sample_data/A_12/: INCAR
CLAMM_Prep/NiMnIn_sample_data/A_2/: INCAR  OUTCAR  POSCAR
CLAMM_Prep/NiMnIn_sample_data/A_3/: OUTCAR  POSCAR
CLAMM_Prep/NiMnIn_sample_data/A_4/: OUTCAR
CLAMM_Prep/NiMnIn_sample_data/A_5/: CONTCAR
CLAMM_Prep/NiMnIn_sample_data/A_6/: CONTCAR  INCAR  OUTCAR
CLAMM_Prep/NiMnIn_sample_data/A_7/: CONTCAR  POSCAR
CLAMM_Prep/NiMnIn_sample_data/A_8/: CONTCAR  INCAR
CLAMM_Prep/NiMnIn_sample_data/A_9/: CONTCAR  OUTCAR
CLAMM_Prep/NiMnIn_sample_data/B_0/: CONTCAR  OUTCAR
CLAMM_Prep/NiMnIn_sample_data/B_1/: CONTCAR  OUTCAR
CLAMM_prep/: README.md  data_mag  main.py  param_in
(+94 files in other folders)
